# hackattic

./: Cargo.toml  Makefile.toml
backup_restore/: challenge.sh
help_me_unpack/: Cargo.toml
help_me_unpack/src/: main.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
mini-miner/: Cargo.toml
mini-miner/src/: main.rs
websocket_chit_chat/: Cargo.toml
websocket_chit_chat/src/: main.rs
