[workspace]
resolver = "1"
members = ["mini-miner"]

[workspace.dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
reqwest = { version =  "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["rt-multi-thread","macros"] }
