[workspace]
resolver = "1"
members = [ "help_me_unpack", "helpers","mini-miner"]

[workspace.dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
reqwest = { version =  "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["rt-multi-thread","macros"] }
base64 = "0.22.1"
futures = "0.3.31"
helpers = { path = "./helpers" }
log = "0.4.27"
testcontainers = "0.24.0"
testcontainers-modules = "0.12.0"
sqlx ={ version = "0.8.6" }
