[package]
name = "help_me_unpack"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
helpers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
byteorder = "1.5"
