[package]
name = "mini-miner"
version = "0.1.0"
edition = "2024"
description = "https://hackattic.com/challenges/mini_miner"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha256 = "1.6.0"
