[package]
name = "websocket_chit_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
helpers = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite ={version = "0.27.0", features = [ "rustls-tls-webpki-roots", "rustls" ]}
rustls = "0.23.31"
futures = "0.3.31"
futures-util = "0.3.31"
